Tue Oct  8 17:06:05 1991  Linus Tolke Y  (linus at lysator)

	* Distributed version 0.34.2		20:50

	* edit-text.el, lyskom-rest.el (lyskom-edit-text, lyskom-filter):
	  Found and fixed the bug that made the first char in the
	  edit-buffer arrive in the *kom*-buffer.

Mon Oct  7 16:29:42 1991  Linus Tolke Y  (linus at lysator)

	* commands1.el (lyskom-change-pres-or-motd-3): Now we get the
 	  empty form if we are changing  presentation and we didn't have
	  any before. 

	* commands1.el, swedish-string.el (lyskom-go-to-empty-conf): when
	  going to an empty conf the conf-name will be shown.

	* commands1.el (lyskom-do-go-to-conf): The map of texts i the
	  conferences will no be refetched if we go to an empty one.

Sun Oct  6 10:37:07 1991  Linus Tolke Y  (linus at robert)

	* vars.el (kom-do-when-done): Changed the default to a language
	  independent one.

	* english-strings.el: New file, written by David Byers.

Thu Oct  3 16:52:43 1991  Linus Tolke Y  (linus at lysator)

	* edit-text.el, swedish-strings.el (lyskom-edit-mode): Better
	  documentation. Help on the separator line.

	* edit-text.el (kom-edit-insert-text): Buggfix, this stopped
	  working when the strings where put in a separate file.

Wed Oct  2 17:35:34 1991  Linus Tolke Y  (linus at lysator)

	* commands2.el, swedish-strings.el (kom-compile-bug-report): The
	  default conference (number 79) to which the bug-report was send
	  by default is removed and substituted buy an instruction where
	  to send the bug-report to.

	* async.el (lyskom-insert-personal-message): Man vill ha
	  display-buffer f|r att visa meddelandebufferten, inte
	  pop-to-buffer.

Sun Sep 29 04:26:52 1991  Per Cederqvist  (ceder at ruben)

	* flags.el (lyskom-read-options-2): Run lyskom-login-hook even if
	  the person has no userarea.

	* vars.el (kom-show-personal-message-in-buffer,
	  kom-pop-personal-message, kom-ding-on-personal-messages,
	  lyskom-personal-messages-hook): added.
